[package]
name = "bench-tx-burst"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# bench-tx-burst — one-shot burst-write throughput grid (spec §11.1).
#
# Phase 5 of the 2026-05-09 bench-suite overhaul split the legacy
# bench-vs-mtcp binary into two focused tools:
#
#   * bench-tx-burst  (this crate): K × G = 20 buckets — one persistent
#     connection, K bytes back-to-back per burst, gap G between bursts.
#   * bench-tx-maxtp  (sibling crate): W × C grid — sustained-rate.
#
# The mTCP arm was removed in Phase 2; the live comparator triplet is
# `dpdk_net` (this stack) + `linux_kernel` (kernel TCP via std::net) +
# `fstack` (F-Stack on DPDK, feature-gated).
#
# Peer expectations:
#   * dpdk_net : echo-server on port 10001 (drains TX side, ACKs).
#   * linux_kernel : echo-server on port 10001 (only the DUT TX path is
#     measured; the recv path is drained but not used for the sample).
#   * fstack : echo-server on port 10001 — F-Stack sends standard TCP
#     so the dpdk echo-server handles both stacks transparently.
#
# Measurement contract (spec §11.1):
#   * t0 = inline TSC pre-first-send.
#   * t1 = NIC HW TX timestamp on last segment of burst (ENA falls back
#     to TSC at `rte_eth_tx_burst` return — see TxTsMode).
#   * throughput_per_burst = K / (t1 - t0).
#   * Secondary decomposition: t_first_wire on segment 1 →
#     `burst_initiation_ns = t_first_wire - t0`,
#     `burst_steady_bps = K / (t1 - t_first_wire)`.

[lib]
name = "bench_tx_burst"
path = "src/lib.rs"

[[bin]]
name = "bench-tx-burst"
path = "src/main.rs"

[features]
default = []
# Enables the F-Stack arm (fstack.rs). Requires libfstack.a +
# DPDK 23.11 + F-Stack headers at /opt/f-stack on the bench-pair AMI
# (image-builder component 04b-install-f-stack.yaml). Default builds
# skip the F-Stack arm so the workspace compiles on dev hosts without
# F-Stack.
#
# The FFI bindings come from the shared `bench-fstack-ffi` crate
# (Phase 5 Task 5.4 consolidation); this crate's own build.rs still
# owns the link-arg recipe.
fstack = ["bench-fstack-ffi/fstack"]

[dependencies]
bench-common = { path = "../bench-common" }
bench-fstack-ffi = { path = "../bench-fstack-ffi" }
# bench-rtt provides workload helpers (open_connection,
# drain_and_accumulate_readable, tsc_delta_to_ns) used by the dpdk arm.
bench-rtt = { path = "../bench-rtt" }
dpdk-net-core = { path = "../../crates/dpdk-net-core" }
dpdk-net-sys = { path = "../../crates/dpdk-net-sys" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
csv = "1.3"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hostname = "0.4"
uuid = { version = "1", features = ["v4"] }
thiserror = { workspace = true }
