[package]
name = "bench-vs-linux"
version.workspace = true
edition.workspace = true
publish = false

# Post-2026-05-09 bench-suite overhaul Phase 4: bench-vs-linux retains
# only **mode B** (wire-diff, rfc_compliance preset). Mode A (RTT
# comparison across stacks) consolidated into the new bench-rtt crate.
#
# Mode B canonicalises a DUT pcap + a peer pcap and byte-diffs them.
# The MVP consumes pre-captured pcaps via `--local-pcap` /
# `--peer-pcap`; live tcpdump+SSH orchestration is a follow-up (Task 15).
# See docs/superpowers/specs/2026-04-21-stage1-phase-a10-benchmark-
# harness-design.md §8 and parent spec §11.5.

[lib]
name = "bench_vs_linux"
path = "src/lib.rs"

[[bin]]
name = "bench-vs-linux"
path = "src/main.rs"

[features]
default = []

[dependencies]
bench-common = { path = "../bench-common" }
dpdk-net-core = { path = "../../crates/dpdk-net-core" }
# Task 9: imported for `apply_preset(DPDK_NET_PRESET_RFC_COMPLIANCE, ..)`
# so mode B's engine build goes through the same preset entry point as
# the C ABI. Pulling the rlib is free beyond cbindgen rerunning on
# dpdk-net changes; we don't consume the FFI surface.
dpdk-net = { path = "../../crates/dpdk-net" }
dpdk-net-sys = { path = "../../crates/dpdk-net-sys" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
csv = "1.3"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hostname = "0.4"
uuid = { version = "1", features = ["v4"] }
libc = { workspace = true }
thiserror = { workspace = true }
# Task 9: pcap parsing + rewrite for mode B divergence-normalisation.
# Same pcap-file 2.x version used by tools/scapy-fuzz-runner.
pcap-file = "2"
