[package]
name = "scapy-fuzz-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dpdk-net-core = { path = "../../crates/dpdk-net-core", features = ["test-inject"] }
pcap-file = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[[bin]]
name = "scapy-fuzz-runner"
path = "src/main.rs"
